Bug 24529 - Retail: Locations menu string is truncated It fixes localization strings (Adress Line 1, Province, Zip Code) for alert message in Checkout dialog as well.
Conflicts:
	HTML5/Web_ordering_app/index.html
	HTML5/Web_ordering_app/skins/directory/views/mainView.js
	HTML5/Web_ordering_app/skins/directory_mobile/views/mainView.js
	HTML5/Web_ordering_app/skins/mlb/views/mainView.js
	HTML5/Web_ordering_app/skins/paypal/views/mainView.js
	HTML5/Web_ordering_app/skins/retail/css/mainCSS.css
	HTML5/Web_ordering_app/skins/retail/views/mainView.js
	HTML5/Web_ordering_app/skins/weborder/views/mainView.js
	HTML5/Web_ordering_app/skins/weborder_mobile/views/mainView.js

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -268,7 +268,7 @@ footer {
     max-width: 60px;
 }
 #header .main ul.menu li.locations {
-    max-width: 60px;
+    max-width: 80px;
 }
 #header .main ul.menu li.active {
     cursor: default;
